--- a/fellowcrm/templates/picklists/new_picklist.html
+++ b/fellowcrm/templates/picklists/new_picklist.html
@@ -70,11 +70,12 @@
                         {% endfor %}
                     </div>
                   {% else %}
-                    {{ form.lang(class="form-control required from-control-lg", placeholder="picklist name ...") }}
+                    {{ form.lang(class="form-control required from-control-lg", placeholder="picklist language ...") }}
                   {% endif %}
             </div>
         </div>
-        <div class="col-6">
+        
+        <div class="col-4">
             <div class="form-group">
                 <div class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" id="{{ form.id }}">
@@ -84,7 +85,7 @@
                 
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-4">
             <div class="form-group">
                 <div class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" id="{{ form.id }}">
@@ -92,6 +93,21 @@
                 
                 </div>
                 
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="form-group">
+                {{ form.order.label(class="form-control-label") }}
+                {% if form.order.errors %}
+                    {{ form.order(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.order.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                  {% else %}
+                    {{ form.order(class="form-control from-control-lg", placeholder="Order ...") }}
+                  {% endif %}
             </div>
         </div>
     </div>
