--- a/fellowcrm/templates/layout.html
+++ b/fellowcrm/templates/layout.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="CRM">
-    <meta name="author" content="Jagjot Singh">
-    <meta name="generator" content="Jekyll v3.8.5">
-    <title>fellowcrm - Open Source CRM Application</title>
+    <meta name="author" content="Daniel Jordan">
+    <meta name="generator" content="Vscode">
+    <title>FellowCRM - Blueprint for CRM</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
@@ -123,7 +123,7 @@
               <a class="dropdown-item" href="#">Menu</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Strings</a>
-              <a class="dropdown-item" href="{{ url_for('picklists.get_picklist_view') }}">Picklist</a>
+              <a class="dropdown-item" href="{{ url_for('picklists.get_picklists_view') }}">Picklist</a>
               <a class="dropdown-item" href="#">Table</a>
 
               <div class="dropdown-divider"></div>
