--- a/fellowcrm/templates/login.html
+++ b/fellowcrm/templates/login.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="author" content="Daniel Jordan">
     <meta name="generator" content="Jekyll v3.8.5">
-    <title>fellowcrm - Register New User</title>
+    <title>{{ _('fellowcrm - Register New User')}}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -84,9 +84,13 @@
               {{ form.submit(class="btn btn-lg btn-block btn-outline-info") }}
           </div>
           <p class="text-muted ml-1 text-left" style="display: block;">
-            <a href="#">Forgot Password?</a>
+            <a href="#">{{_('Forgot Password?')}}</a>
           </p>
-
+          
+          <a href="{{ url_for('users.login',language='de')}}">
+            <img class="mr-3" src="/static/imgs/german.png" alt="German">
+          </a>
+          <a href="{{ url_for('users.login',language='en')}}"><img class="mr-3" src="/static/imgs/english.png" alt="English"></a>
         <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
       </form>
 </body>
